BusOne/src/objects/Metadata_Definition_vod__c.object
<CustomObject>
    <description>Stores page layout Metadata. Veeva use only.</description>
    <fields>
        <fullName>Layout_ID_vod__c</fullName>
        <description>Salesforce ID of the layout represented.</description>
        <externalId>true</externalId>
        <label>Layout ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Layout_Name_vod__c</fullName>
        <description>Name of the layout being represented.</description>
        <label>Layout Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name_vod__c</fullName>
        <description>Name of the object that the layout is for</description>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_vod__c</fullName>
        <description>Stores the Record Type ID of the extracted record type.</description>
        <label>Record Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>XML_vod__c</fullName>
        <description>Metadata XML</description>
        <label>XML</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Metadata Definition</label>
    <nameField>
        <displayFormat>MD-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metadata Definitions</pluralLabel>
    <recordTypes>
        <fullName>Event_Type_vod</fullName>
        <active>true</active>
        <description>Used to store event types for integration with Vault</description>
        <label>Event_Type_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Layout_vod</fullName>
        <active>true</active>
        <description>Stores page layout metadata</description>
        <label>Layout_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lookup_Search_Layout_vod</fullName>
        <active>true</active>
        <description>System record type. Do not modify.</description>
        <label>Lookup_Search_Layout_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Weblink_vod</fullName>
        <active>true</active>
        <description>Stores button metadata</description>
        <label>Weblink_vod</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>